--- a/stock_portfolio/stock_portfolio/templates/base.jinja2
+++ b/stock_portfolio/stock_portfolio/templates/base.jinja2
@@ -21,7 +21,7 @@
         <li><a href="{{request.route_url('home')}}">Home</a></li>
         <li><a href="{{request.route_url('auth')}}">Login</a></li>
         <li><a href="{{request.route_url('portfolio')}}">Portfolio</a></li>
-        <li><a href="{{request.route_url('stock')}}">Stock Details</a></li>
+        <li><a href="{{request.route_url('stock')}}">Stock Search</a></li>
       </ul>
     </div>
     <h1>Stock Portfolio</h1>
