--- a/stock_portfolio/stock_portfolio/templates/auth.jinja2
+++ b/stock_portfolio/stock_portfolio/templates/auth.jinja2
@@ -4,8 +4,8 @@
     <form id="registration-form" method="POST" action="{{request.route_url('auth')}}">
       <input type="hidden" name="csrf_token" value="{{request.session.get_csrf_token()}}">
       <input class="username" name="username" type="text" placeholder="Username" required>
-      <input class="password" name="password" type="text" placeholder="Password" required>
-      <input class="confirmPassword" type="text" placeholder="Confirm Password" required>
+      <input class="password" name="password" type="password" placeholder="Password" required>
+      {# <input class="confirmPassword" type="text" placeholder="Confirm Password" required> #}
       <input class="email" name="email" type="text" placeholder="Email" required>
       <button type="submit">Register</button>
     </form>
