--- a/stock_portfolio/stock_portfolio/templates/portfolio.jinja2
+++ b/stock_portfolio/stock_portfolio/templates/portfolio.jinja2
@@ -1,5 +1,8 @@
 {% extends "base.jinja2" %}
 {% block content %}
+{% if message %}
+<p>{{message}}</p>
+{% endif %}
 {% for stock in stocks %}
   <div>
     <h3>{{stock.companyName}}</h3>
