--- a/stock_portfolio/templates/auth.jinja2
+++ b/stock_portfolio/templates/auth.jinja2
@@ -13,7 +13,7 @@
     <form id="login-form" method="GET" action="{{request.route_url('auth')}}">
       <input type="hidden" name="csrf_token" value="{{request.session.get_csrf_token()}}">
       <input class="username" name="username" type="text" placeholder="Username" required>
-      <input class="password" name="password" type="text" placeholder="Password" required>
+      <input class="password" name="password" type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
 {% endblock content %}
